[project]
name = "finai-tax-harvest-wash"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "ollama>=0.5.3",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "pydantic>=2.11.7",
    "pytest>=8.4.1",
    "streamlit>=1.48.0",
    "uvicorn>=0.35.0",
]
